<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/app_label">
    <PreferenceCategory android:title="Filter">

        <ListPreference
            android:defaultValue="@string/settings_default_value_order_by"
            android:entries="@array/settings_order_key"
            android:entryValues="@array/settings_order_value"
            android:key="@string/settings_key_order_by"
            android:summary="%s"
            android:title="@string/settings_title_order_by" />

        <EditTextPreference
            android:defaultValue="@string/settings_default_page_size"
            android:inputType="number"
            android:key="@string/settings_key_page_size"
            android:summary="%s"
            android:title="@string/settings_title_page_size" />

    </PreferenceCategory>
</PreferenceScreen>